--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "devDependencies": {
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "@types/react-instantsearch-core": "^6.10.6",
+    "@types/react-instantsearch-dom": "^6.12.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "react-instantsearch-dom": "^6.19.0",
     "typescript": "4.5.4"
   }
 }
